# tf-backend

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
cmake/: FindCfgLLVM.cmake  FindOptions.cmake
docs/features/: FAQ.md  fundation.md
include/: adaptor.h  adaptor_interface.h  device.h  kernel_context.h  macro.h  op_registry.h
include/adt/: ArrayRef.h  StringRef.h  allocator.h  any.h  base_types.h  iterator_range.h  meta_helper.h  ref_counter_ptr.h  shape_type.h  tensor.h  tensor_impl.h  tensor_storage.h
include/capi/: backend_api.h
include/device_ops/: device_ops.h
include/internal/: shape_inference.h  support.h
include/logger/: logger.h
include/type/: allocator.h  any.h  ref_counter_ptr.h  tensor.h  tensor_impl.h
lib/: CMakeLists.txt
lib/adt/: CMakeLists.txt  allocator.cpp  ref_counter_ptr.cpp  shape_inference.cpp  tensor.cpp  tensor_impl.cpp
lib/capi/: CMakeLists.txt  backend_api.cpp
lib/logger/: CMakeLists.txt  logger.cpp
lib/op_registry/: CMakeLists.txt  kernel_context.cpp  op_registry.cpp
lib/platform/: CMakeLists.txt  device.cpp
ops/: CMakeLists.txt  binary.cpp
ops/native/: CMakeLists.txt  native_ops.cpp  native_ops.h  op_registry.cpp
python/: CMakeLists.txt  tf_backend.cpp
python/tf_backend/: __init__.py
runtime/: CMakeLists.txt  runtime.cpp  runtime.h
script/: append_link_opts.py  apply_patch.py  build_llvm.sh  build_plugin.sh  run_codegen_tool.sh
test/cc_test/: test_cpu_op.cpp  test_registation.cpp  test_type.cpp
test/model/: mnist.py
test/python/: test_add.py  test_add_grad.py  test_init.py  test_load_plugin.py
tf1.x_plugin/: BUILD  tf_plugin.cc
tf1.x_plugin/kernels/: BUILD  adaptor.hpp  backend_ops.cc  backend_ops.h
tf1.x_plugin/ops/: BUILD  backend_ops.cc
tf1.x_plugin/optimization_pass/: BUILD  build_backend_ops_pass.cc  white_list.cc  white_list.h
tools/: CMakeLists.txt  registry_codegen.cpp
